Maquetacion lista todoList

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,2 @@
-<section class="todoapp">
-  <header class="todoapp__header">
-    <h1 class="todoapp__h1">todos</h1>
-  </header>
-  <!-- This section should be hidden by default and shown when there are todos -->
-  <div class="global">
-    <main class="main">
-      <input
-        class="todoapp__input"
-        placeholder="What needs to be done?"
-        autofocus
-      />
-      <!-- <input id="toggle-all" class="main__input" type="checkbox" /> -->
-      <!-- <label for="main__label">Mark all as complete</label> -->
-      <ul class="main__ul">
-        <!-- These are here just to show the structure of the list items -->
-        <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-        <li class="main__li">
-          <div class="main__subcontainer">
-            <input class="main__input" type="checkbox" checked />
-            <label class="main__label">Taste JavaScript</label>
-            <!-- <button class="main__btn"></button> -->
-          </div>
-          <!-- <input class="main__input" value="Create a TodoMVC template" /> -->
-        </li>
-        <li class="main__li">
-          <div class="main__subcontainer">
-            <input class="main__input" type="checkbox" />
-            <label class="main__label">Buy a unicorn</label>
-            <!-- <button class="main__btn"></button> -->
-          </div>
-          <!-- <input class="main__input" value="Rule the web" /> -->
-        </li>
-      </ul>
-    </main>
-    <!-- This footer should hidden by default and shown when there are todos -->
-    <footer class="footer">
-      <!-- This should be `0 items left` by default -->
-      <span class="footer__span"><strong>0</strong> item left</span>
-      <!-- Remove this if you don't implement routing -->
-      <ul class="footer__ul">
-        <li>
-          <a class="footer__a" href="#/">All</a>
-        </li>
-        <li>
-          <a class="footer__a" href="#/active">Active</a>
-        </li>
-        <li>
-          <a class="footer__a" href="#/completed">Completed</a>
-        </li>
-      </ul>
-      <!-- Hidden if no completed items are left ↓ -->
-      <button class="footer__btn">Clear completed</button>
-    </footer>
-  </div>
-</section>
-<footer class="info">
-  <p class="info__p">Double-click to edit a todo</p>
-  <!-- Remove the below line ↓ -->
-  <p class="info__p">
-    Template by <a href="http://sindresorhus.com">Sindre Sorhus</a>
-  </p>
-  <!-- Change this out with your name and url ↓ -->
-  <p class="info__p">Created by <a href="http://todomvc.com">you</a></p>
-  <p class="info__p">Part of <a href="http://todomvc.com">TodoMVC</a></p>
-</footer>
+<app-todo-page></app-todo-page>
+<app-footer></app-footer>
