--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,1 +1,8 @@
-<p>todo-item works!</p>
+<li class="main__li">
+  <div class="main__subcontainer">
+    <input class="main__input" type="checkbox" checked />
+    <label class="main__label">Taste JavaScript</label>
+    <!-- <button class="main__btn"></button> -->
+  </div>
+  <!-- <input class="main__input" value="Create a TodoMVC template" /> -->
+</li>
