--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="info">
+  <p class="info__p">Double-click to edit a todo</p>
+  <!-- Remove the below line ↓ -->
+  <p class="info__p">
+    Template by <a href="http://sindresorhus.com">Sindre Sorhus</a>
+  </p>
+  <!-- Change this out with your name and url ↓ -->
+  <p class="info__p">Created by <a href="http://todomvc.com">you</a></p>
+  <p class="info__p">Part of <a href="http://todomvc.com">TodoMVC</a></p>
+</footer>
