Store con redux, funcion de añadir y listar

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="info">
-  <p class="info__p">Double-click to edit a todo</p>
+  <p class="info__p">Doble click para editar un TODO</p>
   <!-- Remove the below line ↓ -->
   <p class="info__p">
     Template by <a href="http://sindresorhus.com">Sindre Sorhus</a>
