--- a/src/app/todos/todo-add/todo-add.component.html
+++ b/src/app/todos/todo-add/todo-add.component.html
@@ -1,1 +1,7 @@
-<input class="input" placeholder="¿ Qué quieres hacer ?" autofocus />
+<input
+  class="input"
+  placeholder="¿ Qué quieres hacer ?"
+  [formControl]="txtInput"
+  (keyup.enter)="agregar()"
+  autofocus
+/>
