--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,7 +1,7 @@
-<li class="main__li">
+<li class="main__li" [ngClass]="todo.completado ? 'main__li--completed' : ''">
   <div class="main__subcontainer">
     <input class="main__input" type="checkbox" checked />
-    <label class="main__label">Taste JavaScript</label>
+    <label class="main__label">{{ todo.texto }}</label>
     <!-- <button class="main__btn"></button> -->
   </div>
   <!-- <input class="main__input" value="Create a TodoMVC template" /> -->
