--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,3 +1,3 @@
 <ul class="main__ul">
-  <app-todo-item></app-todo-item>
+  <app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
 </ul>
