Tachar todo, editar falta la funcion

--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,8 +1,53 @@
-<li class="main__li" [ngClass]="todo.completado ? 'main__li--completed' : ''">
-  <div class="main__subcontainer">
-    <input class="main__input" type="checkbox" checked />
-    <label class="main__label">{{ todo.texto }}</label>
-    <!-- <button class="main__btn"></button> -->
+<li class="main__li">
+  <div class="main__container">
+    <input
+      class="main__edit"
+      [ngClass]="editando ? 'main__input--edit' : ''"
+      type="text"
+      #inputFisico
+      (keyup.enter)="editarTodo()"
+    />
+    <!--[formControl]="txtInputEdit"-->
+    <div class="main__subcontainer" [ngClass]="editando ? 'main__editing' : ''">
+      <input
+        class="main__checkbox"
+        name="chkCompletado"
+        [formControl]="chkCompletado"
+        type="checkbox"
+        (change)="onCheckboxChange()"
+      />
+      <!--  -->
+      <label
+        [ngClass]="todo.completado ? 'completed' : ''"
+        class="main__label"
+        >{{ todo.texto }}</label
+      >
+    </div>
+    <div class="main__container--btns">
+      <button class="main__btn" (click)="edit()">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          class="bi bi-pencil main__edit--icon"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"
+          />
+        </svg>
+      </button>
+      <button class="main__btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          class="bi bi-x main__destroy"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+          />
+        </svg>
+      </button>
+    </div>
   </div>
-  <!-- <input class="main__input" value="Create a TodoMVC template" /> -->
 </li>
