--- a/src/app/todos/todo-item/todo-item.component.scss
+++ b/src/app/todos/todo-item/todo-item.component.scss
@@ -5,16 +5,66 @@
     // padding: 1rem;
     list-style: none;
     padding-bottom: 1rem;
+    display: flex;
+
+    justify-content: flex-start;
+    flex-flow: column nowrap;
+    gap: 1rem;
+    width: 100%;
   }
   &__li--completed {
     text-decoration: dashed;
   }
   &__container {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+    align-items: center;
   }
   &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
   }
   &__subcontainer {
     display: flex;
     gap: 1rem;
+    align-items: center;
   }
+  &__destroy {
+    width: 100%;
+    max-width: 1rem;
+  }
+  &__editing {
+    display: none;
+    transition: all 0.5s ease;
+  }
+  &__label {
+    color: black;
+    font-weight: bold;
+  }
+  &__edit {
+    display: none;
+    // display: block;
+    transition: all 0.5s ease;
+  }
+  &__input--edit {
+    background-color: red;
+    opacity: 100%;
+    display: block;
+  }
+  &__container--btns {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 2rem;
+  }
+  &__edit--icon {
+    width: 100%;
+    max-width: 1rem;
+  }
+}
+.completed {
+  text-decoration: line-through;
+  color: rgb(158, 158, 158);
 }
