--- a/src/app/todos/todo-page/todo-page.component.scss
+++ b/src/app/todos/todo-page/todo-page.component.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
+  padding: 1rem;
   &__h1 {
     color: red;
     font-weight: lighter;
