--- a/src/app/todos/todo-footer/todo-footer.component.scss
+++ b/src/app/todos/todo-footer/todo-footer.component.scss
@@ -1,9 +1,9 @@
 .footer {
   // background-color: red;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 1rem;
   padding: 1rem;
   &__ul {
