--- a/src/app/todos/todo-item/todo-item.component.scss
+++ b/src/app/todos/todo-item/todo-item.component.scss
@@ -50,9 +50,11 @@
     transition: all 0.5s ease;
   }
   &__input--edit {
-    background-color: red;
+    // background-color: red;
     opacity: 100%;
     display: block;
+    padding: 1rem;
+    max-width: 10rem;
   }
   &__container--btns {
     display: flex;
